# VitaTweaks

./: README.md
CustomWarning/: CMakeLists.txt  main.c
CustomWarning/custom_warning/: custom_warning.0.txt  custom_warning.1.txt  custom_warning.10.txt  custom_warning.11.txt  custom_warning.12.txt  custom_warning.13.txt  custom_warning.14.txt  custom_warning.15.txt  custom_warning.16.txt  custom_warning.17.txt  custom_warning.18.txt  custom_warning.2.txt  custom_warning.3.txt  custom_warning.4.txt  custom_warning.5.txt  custom_warning.6.txt  custom_warning.7.txt  custom_warning.8.txt
DownloadEnabler/: CMakeLists.txt  exports.yml  main.c
NoLockScreen/: CMakeLists.txt  exports.yml  main.c
NoTrophyMsg/: CMakeLists.txt  exports.yml  main.c
customwarning/: CMakeLists.txt  main.c
test/: exports.yml
